# claude-code-advanced-hands-on-workshop

./: .gitignore  CLAUDE.md  OWNERS.md  QUICKSTART.md  README.md  claude_code_advanced_workshop.code-workspace  contoso.code-workspace  pyproject.toml
.claude/: settings.json
.claude/agents/: README.md  merchant.md  shipit.md  skeptic.md
.claude/commands/: README.md  run-pipeline.md
.devcontainer/: README.md  devcontainer.json  post-create.sh
artifacts/: README.md
hooks/: README.md  audit_log.py  block_test_failures.py  protect_paths.py  scan_secrets.py
notebooks/day1/: capstone_expiring_holds.ipynb  module1_intent.ipynb  module2_execution_harness.ipynb  module3_subagents.ipynb  module4_worktrees.ipynb  module5_agent_teams.ipynb  module6_evaluation_loops.ipynb
reference/m3/: plan.md
sandbox/: Dockerfile  README.md  planted_secret.txt  run-sandbox.sh
scenarios/: capstone-expiring-holds.md  d2-capstone-adversarial.md  d2-capstone-signed-webhooks.md  d2-m4-impossible.md  d2-m6-add-analytics-field.md  m1-transfer-limit.md  m2-search.md  m2-void.md  m3-explore-analytics.md  m4-cache-analytics.md  m5-webhooks.md  m6-key-ttl.md  sandbox-spec-template.md
starter-agents/: critic.skeleton.md  explorer.skeleton.md  implementer.skeleton.md  synthesizer.skeleton.md  tester.skeleton.md
templates/: audit-log-schema.md  halt-report.md  intent.md  plan.md  threat-model.md
tests/: test_analytics.py  test_api_keys.py  test_config.py  test_db.py  test_hooks.py  test_m6_api_key_expiry.py  test_models.py  test_posting.py  test_seed.py  test_transfers.py  test_webhooks.py
(+61 files in other folders)
