[project]
name = "contoso-workshop"
version = "1.0.0"
description = "ContosoBank sandbox — Day 1 labs for the Advanced Claude Code workshop"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "jupyterlab>=4.2",
    "rich>=13.0",
    "nbformat>=5.10",
    "nbconvert>=7.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contoso"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
